get-started/kgateway/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: get-started-ent-helm-test
spec:
  timeouts:
    exec: 60s
  steps:
  - try:
    - assert:
        resource:
          ($values.glooVersion != null): true
    - assert:
        resource:
          ($values.glooGatewayLicense != null): true
  - try:
    - script:
        env:
        - name: GLOO_VERSION
          value: ($values.glooVersion)
        - name: GLOO_GATEWAY_LICENSE_KEY
          value: ($values.glooLicense)
        content: |
          bash scripts/install-gloo-gateway.sh
  - try:
    - assert:
        resource:
          apiVersion: apps/v1
          kind: Deployment
          metadata:
            name: gloo-gateway
            namespace: gloo-system
          status:
            readyReplicas: 1
